WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51697
[Qt] [WK2] Missing webattributes in qwkpreferences.
https://bugs.webkit.org/show_bug.cgi?id=51697
Summary
[Qt] [WK2] Missing webattributes in qwkpreferences.
Juha Savolainen
Reported
2010-12-29 00:58:28 PST
I noticed WebKit2-qt dosent have these webattributes: PrivateBrowsingEnabled, DeveloperExtrasEnabled, DnsPrefetchEnabled
Attachments
Added more webattributes to qwkpreferences
(2.67 KB, patch)
2010-12-29 01:04 PST
,
Juha Savolainen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Juha Savolainen
Comment 1
2010-12-29 01:04:53 PST
Created
attachment 77605
[details]
Added more webattributes to qwkpreferences
WebKit Commit Bot
Comment 2
2010-12-29 03:22:57 PST
Comment on
attachment 77605
[details]
Added more webattributes to qwkpreferences Clearing flags on attachment: 77605 Committed
r74738
: <
http://trac.webkit.org/changeset/74738
>
WebKit Commit Bot
Comment 3
2010-12-29 03:23:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug