2010-12-29  Juha Savolainen  <juha.savolainen@weego.fi>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] [WK2] Added more webattributes to the qwkpreferences
        https://bugs.webkit.org/show_bug.cgi?id=51697

        Added PrivateBrowsingEnabled, DeveloperExtrasEnabled, DnsPrefetchEnabled attributes

        * UIProcess/API/qt/qwkpreferences.cpp:
        (QWKPreferences::testAttribute):
        (QWKPreferences::setAttribute):
        * UIProcess/API/qt/qwkpreferences.h:

Canonical link: https://commits.webkit.org/65077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74738 268f45cc-cd09-0410-ab3c-d52691b4dbfc